src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>LG_InstallationCountry__c</fullName>
        <label>Installation Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_InstallationHouseNumberExtension__c</fullName>
        <label>Installation House Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstallationHouseNumber__c</fullName>
        <label>Installation House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstallationPostalCode__c</fullName>
        <label>Installation Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstallationStreet__c</fullName>
        <label>Installation Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstalledDate__c</fullName>
        <description>Date that the Products/Services were installed at the client</description>
        <label>Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_LastStageChangeDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Last date the stage changed</description>
        <label>Last Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_LeadId__c</fullName>
        <description>Filed which contains Lead Id if Opp was a result of Lead conversion</description>
        <label>Lead Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_LostTo__c</fullName>
        <description>competitor against whose we lost a deal</description>
        <label>Lost To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KPN</fullName>
                </value>
                <value>
                    <fullName>Tele2</fullName>
                </value>
                <value>
                    <fullName>Telfort</fullName>
                </value>
                <value>
                    <fullName>Vodafone</fullName>
                </value>
                <value>
                    <fullName>XS4ALL</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_MainReasonLost__c</fullName>
        <label>Main Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Price is not attractive enough</fullName>
                </value>
                <value>
                    <fullName>Product doesn&apos;t match needs customer</fullName>
                </value>
                <value>
                    <fullName>Loyal to current provider</fullName>
                </value>
                <value>
                    <fullName>Switch is too much hassle</fullName>
                </value>
                <value>
                    <fullName>Not satisfied with quality UPC/Ziggo</fullName>
                </value>
                <value>
                    <fullName>Afraid to change vendor</fullName>
                </value>
                <value>
                    <fullName>Does not appreciate telemarketing/d2d sales</fullName>
                </value>
                <value>
                    <fullName>Decision made primary office</fullName>
                </value>
                <value>
                    <fullName>Stuck in existing contract</fullName>
                </value>
                <value>
                    <fullName>Bad experience with Ziggo in retail market</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Other reasons</fullName>
                </value>
                <value>
                    <fullName>Product information (partner)</fullName>
                </value>
                <value>
                    <fullName>Info regarding (delivery) conditions (partner)</fullName>
                </value>
                <value>
                    <fullName>Sales method (partner)</fullName>
                </value>
                <value>
                    <fullName>Info after purchase (Ziggo)</fullName>
                </value>
                <value>
                    <fullName>Delivery time (Ziggo)</fullName>
                </value>
                <value>
                    <fullName>Issues with installation (Ziggo)</fullName>
                </value>
                <value>
                    <fullName>Not interested anymore</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_MobileCompetitorContractEndDate__c</fullName>
        <label>Mobile Competitor Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_NEWSalesChannel__c</fullName>
        <label>Sales Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_NEW_Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_NewerVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to newer version of Opportunity</description>
        <inlineHelpText>Used for history tracking during complex changes</inlineHelpText>
        <label>Newer Version</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Newer Version)</relationshipLabel>
        <relationshipName>OpportunitiesNewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_NonRecurringAmount__c</fullName>
        <description>Total amount of non recurring costs as the sum of the Product Line Items.</description>
        <label>Non-Recurring Amount</label>
        <summarizedField>OpportunityLineItem.LG_OneOffPrice__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LG_OlderVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to older version of Opportunity</description>
        <inlineHelpText>Used for history tracking during complex changes</inlineHelpText>
        <label>Older Version</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>OpportunitiesOlder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Opp_Stage_Check__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to restrict Opp Stage &apos;Ready for Order&apos; to be manually updated</description>
        <label>Opp Stage Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_OpportunityNumber__c</fullName>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LG_OrderEmailAddressHidden__c</fullName>
        <label>Order Email Address Hidden</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LG_OrderNumber__c</fullName>
        <description>defining Order No. in the Back End System</description>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_OrderStatus__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Order_Summary_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Order summary acceptance flag</description>
        <label>Order Summary Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_OriginatingProductBasketId__c</fullName>
        <label>Originating Product Basket Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Partner_Account_Phone_Hidden__c</fullName>
        <formula>Owner.Contact.Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account Phone Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PaymentType__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PenaltyApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the User that approved the overridden value of the Penalty.</description>
        <label>Penalty Approved by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesApprovers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_PostalCity__c</fullName>
        <description>Alternative post address of the customer - city.</description>
        <label>Postal City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalCode__c</fullName>
        <description>Alternative post address of the customer - postal/ZIP code.</description>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalCountry__c</fullName>
        <description>Alternative post address of the customer - country.</description>
        <label>Postal Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PostalHouseNumberExtension__c</fullName>
        <description>Alternative post address of the customer - house number extension.</description>
        <label>Postal House Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalHouseNumber__c</fullName>
        <description>Alternative post address of the customer - house number.</description>
        <label>Postal House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalStreet__c</fullName>
        <description>Alternative post address of the customer -street.</description>
        <label>Postal Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PreferredInstallationDate__c</fullName>
        <description>preferred Installation Time for the Opportunity</description>
        <label>Preferred Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_PreferredInstallationTime__c</fullName>
        <description>preferred Installation Time for the Opportunity</description>
        <label>Preferred Installation Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>08:00 - 13:00</fullName>
                </value>
                <value>
                    <fullName>12:00 - 18:00</fullName>
                </value>
                <value>
                    <fullName>18.00 - 21.00</fullName>
                </value>
                <value>
                    <fullName>Saturday 10.00 - 18.00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PreviousMasterAccount__c</fullName>
        <label>Previous Maste Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PreviousStage__c</fullName>
        <description>Captures the previous stage of the Opportunity</description>
        <label>Previous Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hidden field for fetching contact email from OpportunityContactRole</description>
        <label>PrimaryContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_ProductBasketCounter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Product Basket Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProductsInBasketHidden__c</fullName>
        <description>Needs to be the same length  as the field cscfga__Products_In_Basket__c from the Product Basket!</description>
        <label>Products in Basket Hidden</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_QuoteEmailText__c</fullName>
        <description>Displays dynamic text for communication templates</description>
        <formula>CASE( csordtelcoa__Change_Type__c ,
 &quot;Move&quot;, &quot;Hartelijk dank voor uw getoonde interesse in de verhuismogelijkheden van uw Ziggo pakket. Hierbij stuur ik u een vrijblijvend aanbod, conform uw wensen.&quot;,
 &quot;&quot;, &quot;Hartelijk dank voor uw getoonde interesse in de diensten van Ziggo voor uw bedrijf. Hierbij stuur ik u een vrijblijvend aanbod, conform uw wensen. Ik hoop dat ik u snel welkom mag heten als zakelijke klant.&quot;,
&quot;Hartelijk dank voor uw getoonde interesse in een aanpassing van uw Ziggo pakket. Hierbij stuur ik u een vrijblijvend aanbod, conform uw wensen.&quot;)</formula>
        <label>Quote Email Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_QuoteExpirationDate__c</fullName>
        <description>Hidden field that calculates Quote Expiration Date from TODAY + Quote Expiration Days</description>
        <formula>TODAY() +  LG_QuoteExpirationDays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_QuoteExpirationDays__c</fullName>
        <defaultValue>15</defaultValue>
        <description>Amount of days between today and quote expiration date</description>
        <label>Quote Expiration Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_ReasonOrderNotProcessed__c</fullName>
        <description>Reason why Order could not be processed</description>
        <label>Reason Order not Processed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SharedOfficeBuilding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared Office Building</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_SoftDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for versioning and tracking</description>
        <inlineHelpText>Indicates that the record is not relevant do to the change is active version (newer or older version exists and it is active)</inlineHelpText>
        <label>Soft Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_SpecificInterest__c</fullName>
        <label>Specific Interest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_StandaloneFraudCheckStatus__c</fullName>
        <description>This field would be used for standalone fraud check.</description>
        <label>Standalone Fraud Check Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_SuppressOrderConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To  suppress the order confirmation email and pdf generation for BDS products</description>
        <label>Suppress Order Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Telephony__c</fullName>
        <label>Telephony</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Keep</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_TerminationReason__c</fullName>
        <description>Main termination reason for Opportunities of Termination Record Type</description>
        <label>Termination Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong information at Sale</fullName>
                </value>
                <value>
                    <fullName>No added benefit of product</fullName>
                </value>
                <value>
                    <fullName>Quality Product</fullName>
                </value>
                <value>
                    <fullName>Technical Problems</fullName>
                </value>
                <value>
                    <fullName>Price Product</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Decease</fullName>
                </value>
                <value>
                    <fullName>Termination by Ziggo</fullName>
                </value>
                <value>
                    <fullName>Move/Decease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_TerminationSubReason__c</fullName>
        <description>Subreason of the Termination Reason for Opportunities of the Termination Record Type</description>
        <label>Termination Sub Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LG_TerminationReason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong information terms and conditions</fullName>
                </value>
                <value>
                    <fullName>Wrong information about connection possibilities</fullName>
                </value>
                <value>
                    <fullName>Location no longer existing</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Termination of business activities</fullName>
                </value>
                <value>
                    <fullName>Temporary location</fullName>
                </value>
                <value>
                    <fullName>Insufficient usage</fullName>
                </value>
                <value>
                    <fullName>Download/upload speed too low</fullName>
                </value>
                <value>
                    <fullName>Bundle doesn&apos;t match needs</fullName>
                </value>
                <value>
                    <fullName>Network not reliable</fullName>
                </value>
                <value>
                    <fullName>Connection/Installation problems</fullName>
                </value>
                <value>
                    <fullName>Internet problems</fullName>
                </value>
                <value>
                    <fullName>Telephony problems</fullName>
                </value>
                <value>
                    <fullName>DTV problems</fullName>
                </value>
                <value>
                    <fullName>SLA not met</fullName>
                </value>
                <value>
                    <fullName>Connectivity after move</fullName>
                </value>
                <value>
                    <fullName>Move outside of footprint</fullName>
                </value>
                <value>
                    <fullName>Customer is deceased</fullName>
                </value>
                <value>
                    <fullName>Merging of locations</fullName>
                </value>
                <value>
                    <fullName>Competitor has more attractive price</fullName>
                </value>
                <value>
                    <fullName>Price/Quality ratio glass fibre fulfills requirements better</fullName>
                </value>
                <value>
                    <fullName>Financial situation</fullName>
                </value>
                <value>
                    <fullName>Service employee</fullName>
                </value>
                <value>
                    <fullName>Service Ziggo</fullName>
                </value>
                <value>
                    <fullName>Wrong information</fullName>
                </value>
                <value>
                    <fullName>Unsufficient usage</fullName>
                </value>
                <value>
                    <fullName>Financial situation customer</fullName>
                </value>
                <value>
                    <fullName>Download/upload speed too slow</fullName>
                </value>
                <value>
                    <fullName>SLAs not met</fullName>
                </value>
                <value>
                    <fullName>Connection after move</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_TotalExtraOptiesFormula__c</fullName>
        <formula>SUBSTITUTE(TEXT(FLOOR(FLOOR(LG_TotalExtraOpties__c *100)/100) ),&apos;.00&apos;, &apos;,&apos;)&amp; &quot;,&quot; &amp; SUBSTITUTE(LEFT(TEXT((LG_TotalExtraOpties__c-FLOOR(LG_TotalExtraOpties__c))*100)&amp;&apos;0&apos;, 2),&apos;.&apos;, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Extra Opties Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TotalExtraOpties__c</fullName>
        <description>Sum of Total Opportunity Products with Main OLI=FALSE</description>
        <label>Total Extra Opties</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.LG_MainOLI__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LG_Total_Exposure__c</fullName>
        <description>This is used for credit check exposure</description>
        <label>Total Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_Version__c</fullName>
        <description>Opportunity version</description>
        <inlineHelpText>Used for history tracking during complex changes</inlineHelpText>
        <label>Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Voice_Product_avilable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Back end to field to validate whether voice product is available in product bundle or not used to generate Authorization to port templete</description>
        <label>Voice Product available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lg_Sales_Channel__c</fullName>
        <formula>TEXT( Owner.LG_SalesChannel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pre-installation cancellation (PIC)</fullName>
                </value>
                <value>
                    <fullName>Angebot abgelehnt durch Kunde</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Availability_FF__c</fullName>
        <formula>If( ISPICKVAL(Mobile_Availability__c, &apos;Available&apos;),
	IMAGE(&apos;/resource/Flags/Flags/Green_Flag.png&apos;,&apos;&apos;),
	If( ISPICKVAL(Mobile_Availability__c, &apos;Unavailable&apos;),
           IMAGE(&apos;/resource/Flags/Flags/Red_Flag.png&apos;,&apos;&apos;),
		   IMAGE(&apos;/resource/Flags/Flags/Gray_Flag.png&apos;,&apos;&apos;)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green Flag - Service Available; Red Flag - Service Unavailable; Gray Flag - Service Availability check is not performed yet.</inlineHelpText>
        <label>Mobile Availability</label>
        <type>Text</type>
    </fields>
</CustomObject>